condのor部分まで

--- a/test.ipynb
+++ b/test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "516040da",
    "metadata": {},
    "outputs": [
@@ -22,13 +22,37 @@
        "'LOCATOR_DICT'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"locator_dict\".upper()"
+    "\"locator_dict\".upper()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6ae9c97e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 'ra', 6]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ki = [2, 3]\n",
+    "\n",
+    "ki += [\"ra\", 6]\n",
+    "ki"
    ]
   }
  ],
